Implemented full functionality for working with the customer's shopping cart

--- a/shop/templates/shop/components/_product_card.html
+++ b/shop/templates/shop/components/_product_card.html
@@ -19,7 +19,7 @@
                 <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="{% url 'add_favorite' product.slug %}"><i class="far fa-heart"></i></a></li>
                 {% endif %}
 
-                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="/ru/to_cart/21/add/">Добавить в корзину</a></li>
+                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="{% url 'to_cart' product.pk 'add' %}">Добавить в корзину</a></li>
                 <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
             </ul>
         </div>
