--- a/shop/templates/shop/components/_product_detail.html
+++ b/shop/templates/shop/components/_product_detail.html
@@ -15,7 +15,7 @@
     <div class="row align-items-stretch mb-4">
         <div class="col-sm-3 pl-sm-0"><a
                 class="btn btn-dark btn-sm btn-block h-100 d-flex align-items-center justify-content-center px-0"
-                href="/ru/to_cart/2/add/">Добавить в корзину</a></div>
+                href="{% url 'to_cart' product.pk 'add' %}">Добавить в корзину</a></div>
     </div>
 
     {% if request.user.is_authenticated %}
