--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -63,10 +63,10 @@
                     <div class="bg-light px-4 py-3">
                         <div class="row align-items-center text-center">
                             <div class="col-md-6 mb-3 mb-md-0 text-md-start"><a
-                                    class="btn btn-link p-0 text-dark btn-sm" href="/ru/"><i
+                                    class="btn btn-link p-0 text-dark btn-sm" href="{% url 'index' %}"><i
                                     class="fas fa-long-arrow-alt-left me-2"> </i>Продолжить покупки</a></div>
                             <div class="col-md-6 text-md-end"><a class="btn btn-outline-dark btn-sm"
-                                                                 href="/ru/checkout/">Оформить заказ<i
+                                                                 href="{% url 'checkout' %}">Оформить заказ<i
                                     class="fas fa-long-arrow-alt-right ms-2"></i></a></div>
                         </div>
                     </div>
