--- a/shop/templates/shop/category_page.html
+++ b/shop/templates/shop/category_page.html
@@ -17,7 +17,7 @@
                     <div class="col-lg-6 text-lg-end">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
-                                <li class="breadcrumb-item"><a class="text-dark" href="/ru/">Главная</a></li>
+                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">Главная</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Часы</li>
                             </ol>
                         </nav>
@@ -34,7 +34,7 @@
                     <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                         <div class="row mb-3 align-items-center">
                             <div class="col-lg-6 mb-2 mb-lg-0">
-                                <p class="text-sm text-muted mb-0">Показано 2 товара из 10 товаров</p>
+                                <p class="text-sm text-muted mb-0">Показано {{ products.count }} товара из {{ paginator.count }} товаров</p>
                             </div>
 
                         </div>
@@ -49,29 +49,7 @@
                         </div>
 
                         <!-- PAGINATION-->
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination justify-content-center justify-content-lg-end">
-
-
-                                <li class="page-item mx-1 active"><a class="page-link" href="#!">1</a></li>
-
-
-                                <li class="page-item mx-1"><a class="page-link" href="?page=2">2</a></li>
-
-
-                                <li class="page-item mx-1"><a class="page-link" href="?page=3">3</a></li>
-
-
-                                <li class="page-item mx-1"><a class="page-link" href="?page=4">4</a></li>
-
-
-                                <li class="page-item mx-1"><a class="page-link" href="?page=5">5</a></li>
-
-
-                                <li class="page-item ms-1"><a class="page-link" href="?page=2" aria-label="Next"><span
-                                        aria-hidden="true">»</span></a></li>
-                            </ul>
-                        </nav>
+                        {% include 'shop/components/_pagination.html' %}
                     </div>
                 </div>
             </div>
