--- a/shop/templates/shop/category_page.html
+++ b/shop/templates/shop/category_page.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
+
 {% block title %}
 {{ title }}
 {% endblock title %}
@@ -12,13 +14,13 @@
             <div class="container">
                 <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
                     <div class="col-lg-6">
-                        <h1 class="h2 text-uppercase mb-0">Часы</h1>
+                        <h1 class="h2 text-uppercase mb-0">{% translate 'Часы' %}</h1>
                     </div>
                     <div class="col-lg-6 text-lg-end">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
-                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">Главная</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Часы</li>
+                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">{% translate 'Главная' %}</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">{% translate 'Часы' %}</li>
                             </ol>
                         </nav>
                     </div>
@@ -34,7 +36,7 @@
                     <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                         <div class="row mb-3 align-items-center">
                             <div class="col-lg-6 mb-2 mb-lg-0">
-                                <p class="text-sm text-muted mb-0">Показано {{ products.count }} товара из {{ paginator.count }} товаров</p>
+                                <p class="text-sm text-muted mb-0">{% translate 'Показано' %} {{ products.count }} {% translate 'товара из' %} {{ paginator.count }} {% translate 'товаров' %}</p>
                             </div>
 
                         </div>
