--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
+
 {% block title %}
 {{ title }}
 {% endblock title %}
@@ -14,14 +16,14 @@
             <div class="container">
                 <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
                     <div class="col-lg-6">
-                        <h1 class="h2 text-uppercase mb-0">Оформление заказа</h1>
+                        <h1 class="h2 text-uppercase mb-0">{% translate 'Оформление заказа' %}</h1>
                     </div>
                     <div class="col-lg-6 text-lg-end">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
-                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">Главная</a></li>
-                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'cart' %}">Корзина</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Оформление заказа</li>
+                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">{% translate 'Главная' %}</a></li>
+                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'cart' %}">{% translate 'Корзина' %}</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">{% translate 'Оформление заказа' %}</li>
                             </ol>
                         </nav>
                     </div>
@@ -34,7 +36,7 @@
                     <div class="col-lg-4">
                         <div class="card border-0 rounded-0 p-lg-4 bg-light">
                             <div class="card-body">
-                                <h5 class="text-uppercase mb-4">Ваша покупка</h5>
+                                <h5 class="text-uppercase mb-4">{% translate 'Ваша покупка' %}</h5>
                                 <ul class="list-unstyled mb-0">
 
                                     {% for item in order_products %}
@@ -46,7 +48,7 @@
 
                                     <li class="border-bottom my-2"></li>
                                     <li class="d-flex align-items-center justify-content-between"><strong
-                                            class="text-uppercase small fw-bold">Итого:</strong><span>${{ order.get_cart_total_price }}</span></li>
+                                            class="text-uppercase small fw-bold">{% translate 'Итого' %}:</strong><span>${{ order.get_cart_total_price }}</span></li>
                                 </ul>
                             </div>
                         </div>
@@ -58,45 +60,45 @@
                             <form action="{% url 'payment' %}" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
                                 <div id="user-info">
-                                    <h2 class="h5 text-uppercase mb-4">Ваши данные</h2>
+                                    <h2 class="h5 text-uppercase mb-4">{% translate 'Ваши данные' %}</h2>
                                     <div>
-                                        <label class="form-label text-sm text-uppercase">имя</label>
+                                        <label class="form-label text-sm text-uppercase">{% translate 'имя' %}</label>
                                         {{ customer_form.first_name }}
                                     </div>
                                     <div>
-                                        <label class="form-label text-sm text-uppercase">фамилия</label>
+                                        <label class="form-label text-sm text-uppercase">{% translate 'фамилия' %}</label>
                                         {{ customer_form.last_name }}
                                     </div>
                                     <div>
-                                        <label class="form-label text-sm text-uppercase">почта</label>
+                                        <label class="form-label text-sm text-uppercase">{% translate 'почта' %}</label>
                                         {{ customer_form.email }}
                                     </div>
                                     <div>
-                                        <label class="form-label text-sm text-uppercase">телефон</label>
+                                        <label class="form-label text-sm text-uppercase">{% translate 'телефон' %}</label>
                                         {{ customer_form.phone }}
                                     </div>
                                 </div>
                                 <hr>
                                 <div id="shipping-info">
-                                    <label class="form-label text-sm text-uppercase">Адрес доставки</label>
+                                    <label class="form-label text-sm text-uppercase">{% translate 'Адрес доставки' %}</label>
 
                                     <div>
-                                        <label class="form-label text-sm text-uppercase">город</label>
+                                        <label class="form-label text-sm text-uppercase">{% translate 'город' %}</label>
                                         {{ shipping_form.city }}
                                     </div>
 
                                     <div>
-                                        <label class="form-label text-sm text-uppercase">район</label>
+                                        <label class="form-label text-sm text-uppercase">{% translate 'район' %}</label>
                                         {{ shipping_form.state }}
                                     </div>
 
                                     <div>
-                                        <label class="form-label text-sm text-uppercase">улица</label>
+                                        <label class="form-label text-sm text-uppercase">{% translate 'улица' %}</label>
                                         {{ shipping_form.street }}
                                     </div>
                                 </div>
                                 <br>
-                                <button class="btn btn-success" type="submit">Оформить заказ</button>
+                                <button class="btn btn-success" type="submit">{% translate 'Оформить заказ' %}</button>
                             </form>
                         </div>
                     </div>
