--- a/shop/templates/shop/components/_trending_products.html
+++ b/shop/templates/shop/components/_trending_products.html
@@ -1,7 +1,9 @@
+{% load i18n %}
+
 <section class="py-5">
     <header class="text-center">
-        <p class="small text-muted small text-uppercase mb-1">Подборки товаров</p>
-        <h2 class="h5 text-uppercase mb-4">популярные товары</h2>
+        <p class="small text-muted small text-uppercase mb-1">{% translate 'Подборки товаров' %}</p>
+        <h2 class="h5 text-uppercase mb-4">{% translate 'популярные товары' %}</h2>
     </header>
     <div class="row">
         {% for product in top_products %}
