--- a/shop/templates/shop/components/_user_messages.html
+++ b/shop/templates/shop/components/_user_messages.html
@@ -1,9 +1,11 @@
+{% load i18n %}
+
 {% if messages %}
 <div class="container">
     {% for message in messages %}
     <div class="alert alert-{% if message.tags == 'error' %}danger alert-dismissible fade show{% else %}{{ message.tags }}{% endif %}">
         {{ message }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Закрыть"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="{% translate 'Закрыть' %}"></button>
     </div>
     {% endfor %}
 </div>
