--- a/shop/templates/shop/favorite_products.html
+++ b/shop/templates/shop/favorite_products.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
+
 {% block title %}
 {{ title }}
 {% endblock title %}
@@ -12,13 +14,13 @@
             <div class="container">
                 <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
                     <div class="col-lg-6">
-                        <h1 class="h2 text-uppercase mb-0">Мои избранные товары</h1>
+                        <h1 class="h2 text-uppercase mb-0">{% translate 'Мои избранные товары' %}</h1>
                     </div>
                     <div class="col-lg-6 text-lg-end">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
-                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">Главная</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">избранные</li>
+                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">{% translate 'Главная' %}</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">{% translate 'избранные' %}</li>
                             </ol>
                         </nav>
                     </div>
@@ -32,9 +34,8 @@
                     <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                         <div class="row mb-3 align-items-center">
                             <div class="col-lg-6 mb-2 mb-lg-0">
-                                <p class="text-sm text-muted mb-0">Показано 2 товара из 10 товаров</p>
+                                <p class="text-sm text-muted mb-0">{% translate 'Показано' %} 2 {% translate 'товара' %} {% translate 'из' %} 10 {% translate 'товаров' %}</p>
                             </div>
-
                         </div>
 
                         <div class="row">
@@ -49,22 +50,11 @@
                         <!-- PAGINATION-->
                         <nav aria-label="Page navigation example">
                             <ul class="pagination justify-content-center justify-content-lg-end">
-
-
                                 <li class="page-item mx-1 active"><a class="page-link" href="#!">1</a></li>
-
-
                                 <li class="page-item mx-1"><a class="page-link" href="?page=2">2</a></li>
-
-
                                 <li class="page-item mx-1"><a class="page-link" href="?page=3">3</a></li>
-
-
                                 <li class="page-item mx-1"><a class="page-link" href="?page=4">4</a></li>
-
-
                                 <li class="page-item mx-1"><a class="page-link" href="?page=5">5</a></li>
-
 
                                 <li class="page-item ms-1"><a class="page-link" href="?page=2" aria-label="Next"><span
                                         aria-hidden="true">»</span></a></li>
