--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -1,26 +1,28 @@
+{% load i18n %}
+
 <footer class="bg-dark text-white">
     <div class="container py-4">
         <div class="row py-5">
             <div class="col-md-4 mb-3 mb-md-0">
-                <h6 class="text-uppercase mb-3">Customer services</h6>
+                <h6 class="text-uppercase mb-3">{% translate 'Обслуживание клиентов' %}</h6>
                 <ul class="list-unstyled mb-0">
-                    <li><a class="footer-link" href="#!">Help &amp; Contact Us</a></li>
-                    <li><a class="footer-link" href="#!">Returns &amp; Refunds</a></li>
-                    <li><a class="footer-link" href="#!">Online Stores</a></li>
-                    <li><a class="footer-link" href="#!">Terms &amp; Conditions</a></li>
+                    <li><a class="footer-link" href="#!">{% translate 'Помощь' %} &amp; {% translate 'Наши контакты' %}</a></li>
+                    <li><a class="footer-link" href="#!">{% translate 'Возмещения' %} &amp; {% translate 'Возвраты' %}</a></li>
+                    <li><a class="footer-link" href="#!">{% translate 'Интернет-магазины' %}</a></li>
+                    <li><a class="footer-link" href="#!">{% translate 'Правила' %} &amp; {% translate 'Условия' %}</a></li>
                 </ul>
             </div>
             <div class="col-md-4 mb-3 mb-md-0">
-                <h6 class="text-uppercase mb-3">Company</h6>
+                <h6 class="text-uppercase mb-3">{% translate 'Компания' %}</h6>
                 <ul class="list-unstyled mb-0">
-                    <li><a class="footer-link" href="#!">What We Do</a></li>
-                    <li><a class="footer-link" href="#!">Available Services</a></li>
-                    <li><a class="footer-link" href="#!">Latest Posts</a></li>
+                    <li><a class="footer-link" href="#!">{% translate 'Что мы делаем' %}</a></li>
+                    <li><a class="footer-link" href="#!">{% translate 'Доступные услуги' %}</a></li>
+                    <li><a class="footer-link" href="#!">{% translate 'Последние посты' %}</a></li>
                     <li><a class="footer-link" href="#!">FAQs</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
-                <h6 class="text-uppercase mb-3">Social media</h6>
+                <h6 class="text-uppercase mb-3">{% translate 'Социальные сети' %}</h6>
                 <ul class="list-unstyled mb-0">
                     <li><a class="footer-link" href="#!">Twitter</a></li>
                     <li><a class="footer-link" href="#!">Instagram</a></li>
@@ -32,10 +34,10 @@
         <div class="border-top pt-4" style="border-color: #1d1d1d !important">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="small text-muted mb-0">© 2021 All rights reserved.</p>
+                    <p class="small text-muted mb-0">© 2025 {% translate 'Все права защищены' %}.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <p class="small text-muted mb-0">Template designed by <a class="text-white reset-anchor"
+                    <p class="small text-muted mb-0">{% translate 'Шаблон, разработанный' %} <a class="text-white reset-anchor"
                                                                              href="https://bootstrapious.com/p/boutique-bootstrap-e-commerce-template">Bootstrapious</a>
                     </p>
                     <!-- If you want to remove the backlink, please purchase the Attribution-Free License. See details in readme.txt or license.txt. Thanks!-->
