--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <header class="header bg-white">
     <div class="container px-lg-3">
         <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0"><a class="navbar-brand" href="/ru/"><span
@@ -9,34 +11,37 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <!-- Link--><a class="nav-link active" href="{% url 'index' %}">Главная</a>
+                        <!-- Link--><a class="nav-link active" href="{% url 'index' %}">{% translate 'Главная' %}</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" href=""
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"> Язык</a>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"> {% translate 'Язык' %}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a href="/ru/" class="dropdown-item">Русский</a></li>
-                            <li><a href="/en/" class="dropdown-item">English</a></li>
+                            {% get_current_language as LANGUAGE_CODE %}
+                            {% get_available_languages as LANGUAGES %}
+                            {% get_language_info_list for LANGUAGES as languages %}
+                            {% for lang in languages %}
+                            <li><a href="/{{ lang.code }}/" class="dropdown-item">{{ lang.name_local }}</a></li>
+                            {% endfor %}
                         </ul>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="{% url 'cart' %}"> <i
-                            class="fas fa-dolly-flatbed me-1 text-gray"></i>Корзина
+                            class="fas fa-dolly-flatbed me-1 text-gray"></i>{% translate 'Корзина' %}
                         <small class="text-gray fw-normal">
                         </small></a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'favorite_product_page' %}"> <i
                             class="far fa-heart me-1"></i><small class="text-gray fw-normal">
-                        Избранные
+                        {% translate 'Избранные' %}
                     </small></a></li>
 
                     {% if request.user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'user_logout' %}">
-                        <i class="fas fa-user me-1 text-gray fw-normal"></i>Выйти</a>
+                        <i class="fas fa-user me-1 text-gray fw-normal"></i>{% translate 'Выйти' %}</a>
                     </li>
                     {% else %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'login_registration' %}">
-                        <i class="fas fa-user me-1 text-gray fw-normal"></i>Войти/Зарегистрироваться</a>
+                        <i class="fas fa-user me-1 text-gray fw-normal"></i>{% translate 'Войти/Зарегистрироваться' %}</a>
                     </li>
                     {% endif %}
 
